# Arkneo

./: .gdb_history  .gitignore  Arkneo  CMakeLists.txt  CompileDependencies.bat  README.md  compile.sh
Bruteforcer_cpp/: BruteForcer.hpp  algo.cpp  pseudo_code
CMake/Modules/: FindSFML.cmake
Files/: ColorFragmentShader.fragmentshader  OctoLanternCombined_NoHole.arkneig  OctoLanternCombined_NoHole.stl  TransformVertexShader.vertexshader
Files/boule_disco1/: demibouleafacette.arkneig  demibouleafacette.stl  demibouleafacette2.arkneig  demibouleafacette2.stl
Files/boule_disco2/: bouleafacette3.arkneig  bouleafacette3.stl  bouleafacette4.arkneig  bouleafacette4.stl
Files/cubeTestParsing/: cuby.arkneig
Files/cube_facette1/: cubeafacette.arkneig  cubeafacette.stl  cubeafacette1.arkneig  cubeafacette1.stl
Files/prismeTestParsing/: prysm.arkneig  prysm.stl
Files/waves/: wave1.arkneig  wave1.stl  wave2.arkneig  wave2.stl
algo_cpp/: AngleGen.cpp  AngleGen.cpp~  AngleGen.hh  AngleGen.hh~  main.cpp  main.cpp~
arkneo_algo/: from_points_to_dist.c  test.c
arkneo_algo/calc_angle/: Makefile  angle.c  angle.h  main_test.c
include/: AngleGen.hh  BruteForcer.hpp  BruteForcer.hpp~  STL.hh  Serialization.hh  Sery_Amalgamated.hh  Triangle.hh  Viewer.hh
src/: AngleGen.cpp  ColorFragmentShader.fragmentshader  STL.cpp  Serialization.cpp  Viewer.cpp  algo.cpp  main.cpp  shader.cpp
